feat(community): derive stories from walk diaries