@@ -7,16 +7,20 @@ import org.springframework.data.domain.SliceImpl;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import scit.ainiinu.common.response.SliceResponse;
-import scit.ainiinu.community.dto.StoryResponse;
-import scit.ainiinu.community.entity.Story;
-import scit.ainiinu.community.repository.StoryRepository;
+import scit.ainiinu.community.dto.StoryDiaryItemResponse;
+import scit.ainiinu.community.dto.StoryGroupResponse;
+import scit.ainiinu.community.repository.StoryReadRepository;
 import scit.ainiinu.member.entity.Member;
-import scit.ainiinu.member.repository.MemberFollowRepository;
 import scit.ainiinu.member.repository.MemberRepository;
+import scit.ainiinu.walk.entity.WalkDiary;
 
 import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
+import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
@@ -27,46 +31,83 @@ import java.util.stream.Collectors;
 @Transactional(readOnly = true)
 public class StoryService {
 
-    private final StoryRepository storyRepository;
-    private final MemberFollowRepository memberFollowRepository;
+    private static final LocalDateTime DEFAULT_CREATED_AT = LocalDateTime.of(1970, 1, 1, 0, 0);
+
+    private final StoryReadRepository storyReadRepository;
     private final MemberRepository memberRepository;
 
-    public SliceResponse<StoryResponse> getStories(Long memberId, Pageable pageable) {
-        List<Long> followingIds = memberFollowRepository.findFollowingIdsByFollowerId(memberId);
-        if (followingIds.isEmpty()) {
-            Slice<StoryResponse> emptySlice = new SliceImpl<>(Collections.emptyList(), pageable, false);
+    public SliceResponse<StoryGroupResponse> getStories(Long memberId, Pageable pageable) {
+        LocalDateTime cutoff = LocalDateTime.now().minusHours(24);
+        Slice<Long> authorIdSlice = storyReadRepository.findVisibleAuthorIdsForFollower(memberId, cutoff, pageable);
+
+        List<Long> authorIds = authorIdSlice.getContent();
+        if (authorIds.isEmpty()) {
+            Slice<StoryGroupResponse> emptySlice = new SliceImpl<>(Collections.emptyList(), pageable, false);
             return SliceResponse.of(emptySlice);
         }
 
-        LocalDateTime cutoff = LocalDateTime.now().minusHours(24);
-        Slice<Story> storySlice = storyRepository.findByAuthorIdInAndCreatedAtAfterOrderByCreatedAtDescIdDesc(
-                followingIds,
-                cutoff,
-                pageable
-        );
-
-        List<Long> authorIds = storySlice.getContent().stream()
-                .map(Story::getAuthorId)
-                .distinct()
-                .toList();
+        List<WalkDiary> diaries = storyReadRepository.findVisibleDiariesByAuthorIds(authorIds, cutoff);
+        Map<Long, List<WalkDiary>> diariesByAuthorId = diaries.stream()
+                .collect(Collectors.groupingBy(WalkDiary::getMemberId, LinkedHashMap::new, Collectors.toList()));
 
         Map<Long, Member> memberMap = memberRepository.findAllById(authorIds).stream()
                 .collect(Collectors.toMap(Member::getId, Function.identity()));
 
-        Slice<StoryResponse> mappedSlice = storySlice.map(story -> {
-            Member author = memberMap.get(story.getAuthorId());
-            LocalDateTime createdAt = story.getCreatedAt() != null ? story.getCreatedAt() : LocalDateTime.now();
-            return StoryResponse.builder()
-                    .id(story.getId())
-                    .memberId(story.getAuthorId())
+        List<StoryGroupResponse> groups = new ArrayList<>();
+        for (Long authorId : authorIds) {
+            List<WalkDiary> authorDiaries = new ArrayList<>(diariesByAuthorId.getOrDefault(authorId, List.of()));
+            if (authorDiaries.isEmpty()) {
+                continue;
+            }
+
+            authorDiaries.sort(Comparator
+                    .comparing(this::safeCreatedAt, Comparator.reverseOrder())
+                    .thenComparing(WalkDiary::getId, Comparator.nullsLast(Comparator.reverseOrder())));
+
+            Member author = memberMap.get(authorId);
+            WalkDiary latestDiary = authorDiaries.get(0);
+            List<StoryDiaryItemResponse> diaryItems = authorDiaries.stream()
+                    .map(this::toDiaryItemResponse)
+                    .toList();
+
+            groups.add(StoryGroupResponse.builder()
+                    .memberId(authorId)
                     .nickname(author != null ? author.getNickname() : "이웃")
                     .profileImageUrl(author != null ? author.getProfileImageUrl() : null)
-                    .coverImageUrl(story.getMediaUrl())
-                    .walkDate(createdAt.toLocalDate())
-                    .createdAt(createdAt.atOffset(ZoneOffset.UTC))
-                    .build();
-        });
+                    .coverImageUrl(resolveCoverImageUrl(latestDiary))
+                    .latestCreatedAt(toOffsetDateTime(safeCreatedAt(latestDiary)))
+                    .diaries(diaryItems)
+                    .build());
+        }
 
+        Slice<StoryGroupResponse> mappedSlice = new SliceImpl<>(groups, pageable, authorIdSlice.hasNext());
         return SliceResponse.of(mappedSlice);
+    }
+
+    private StoryDiaryItemResponse toDiaryItemResponse(WalkDiary walkDiary) {
+        return StoryDiaryItemResponse.builder()
+                .diaryId(walkDiary.getId())
+                .title(walkDiary.getTitle())
+                .content(walkDiary.getContent())
+                .photoUrls(new ArrayList<>(walkDiary.getPhotoUrls()))
+                .walkDate(walkDiary.getWalkDate())
+                .createdAt(toOffsetDateTime(safeCreatedAt(walkDiary)))
+                .build();
+    }
+
+    private String resolveCoverImageUrl(WalkDiary walkDiary) {
+        List<String> photoUrls = walkDiary.getPhotoUrls();
+        if (photoUrls == null || photoUrls.isEmpty()) {
+            return null;
+        }
+        return photoUrls.get(0);
+    }
+
+    private LocalDateTime safeCreatedAt(WalkDiary walkDiary) {
+        return walkDiary.getCreatedAt() != null ? walkDiary.getCreatedAt() : DEFAULT_CREATED_AT;
+    }
+
+    private OffsetDateTime toOffsetDateTime(LocalDateTime localDateTime) {
+        return localDateTime.atOffset(ZoneOffset.UTC);
     }
 }
